--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+<meta name="google-site-verification" content="v-JCzZe3zFWHcjtfT_a_PxZVfMIVJO5_NTHOhiptov8" />
+<meta name="naver-site-verification" content="eaf3d7d51dda867ece3e5b21c133e025b983ce8d" />  
   
   
   <title>다른 곳에선 못 봐! 실시간자동차보험 정확도 1위 비교 시스템</title>
@@ -688,3 +689,4 @@
     </div>
 </body>
 </html>
+
